--- a/public/style/index.css
+++ b/public/style/index.css
@@ -28,7 +28,7 @@
 .left-scene:before {
   content: '\F002';
   position: absolute;
-  top: 35px;
+  top: 49px;
   left: 60px;
   font-family: FontAwesome;
   font-size: 2.6em;
@@ -65,4 +65,15 @@
       width: 100%;
       margin: 5px;
       cursor: pointer;
+}
+
+.form-control{
+  background-color: #f4f4f4;
+  height: .5rem;
+  margin: .5rem 0.8rem 1.5rem 0;
+  border: none;
+  padding: .5rem;
+  font-size: 16px;
+  font-style: italic;
+  font-family: 'Mulish', sans-serif;
 }
